2008-03-16  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-combo.c:

	API update: "instance-id" is no longer a property of parser object.

2008-03-16  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/playlist-treeview.c:
	* src/av-cp/renderer-controls.c:

	API update:
	- Use specific getters for basic DIDL props.
	- Use generic getters for 'res' property and it's attributes.

2008-03-10  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/playlist-treeview.c:

	API update: Use generic getters for standard DIDL props.

2008-02-29  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/playlist-treeview.c:

	Better error handling in browse callbacks.

2008-02-26  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/main.c:

	API update: Use g_type_init() instead of gupnp_av_init().

2008-02-25  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-combo.c:

	API updates:
	- We now need a LastChange parser object to be able to parse LastChange
	  events.
	- 'instance-id' is now a property of LastChange parser object.

2008-02-25  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/playlist-treeview.c:
	* src/av-cp/renderer-combo.c:
	* src/av-cp/renderer-controls.c:
	* src/universal-cp/action-dialog.c:

	No need to pass error argument to gupnp_service_proxy_begin_action*()
	anymore.

2008-02-23  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-combo.c:
	* src/av-cp/renderer-controls.c:

	Handle 'TRANSITIONING' state.

2008-02-23  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* data/gupnp-av-cp.glade:

	Add tooltip to 'clear state' button.

2008-02-23  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-combo.c:

	Don't ref the service proxy upon adding a notify on it.

2008-02-23  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/playlist-treeview.c:

	Small cleanup change.

2008-02-14  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-controls.c:

	Correct a typo in Seek implementation.
